Add api-version in plugin.yml to avoid warn message

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,4 @@ name: TeamPacketManager
 author: Flowsqy
 version: ${project.version}
 main: fr.flowsqy.teampacketmanager.TeamPacketManagerPlugin
+api-version: "1.16"
